--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
           AmazonLocationService: {
             maps: {
               items: {
-                "MyMap": {
+                "mapc0dacf80-dev": {
                   style: "Default style"
                 },
               },
-              default: "MyMap",
+              default: "mapc0dacf80-dev",
             },
             region: "us-east-2",
           },
