--- a/src/indexold.html
+++ b/src/indexold.html
@@ -1,4 +1,5 @@
 <html>
+  <h1>Hola!</h1>
   <head>
     <link href="https://cdn.amplify.aws/packages/maplibre-gl/1.15.2/maplibre-gl.css" rel="stylesheet" integrity="sha384-DrPVD9GufrxGb7kWwRv0CywpXTmfvbKOZ5i5pN7urmIThew0zXKTME+gutUgtpeD" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <script src="https://cdn.amplify.aws/packages/maplibre-gl/1.15.2/maplibre-gl.js" integrity="sha384-rwYfkmAOpciZS2bDuwZ/Xa/Gog6jXem8D/whm3wnsZSVFemDDlprcUXHnDDUcrNU" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -20,7 +21,7 @@
 
       Amplify.configure({
         Auth: {
-          identityPoolId: "REPLACE_WITH_POOL_ID",
+          identityPoolId: "us-east-2:670391868519:map/MyMap-dev",
           region: "us-east-2",
         },
         geo: {
